arrow_downward_alt button added

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,12 @@
     background-position: center;
     /* mix-blend-mode: color-burn; */
 }
+
+
+/* arrow_downward_alt */
+
+
+
 /* hero-section end  */
 
 /* Potential Future Listings Start */
